docs/samples/valid/nested_expressions_example.edl
let x: int = 2;
let y: int = 5;
let z: int = (x + (y * 3)) - ((x + y) % 3);
print(z);
print((z + x) * (y - 1));
