docs/samples/invalid/invalid_operator_usage_example.edl
// Expected error: arithmetic operator '+' requires numeric operands.
let x: int = true + 1;
print(x);
